# TensorLogic

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
benchmarks/: memory_profile.py  scale_test.py  strategy_comparison.py
benchmarks/results/: baseline.json
docs/: PERFORMANCE.md  TensorLogic-Overview.md
docs/api/: compilation.md
docs/backends/: API.md
docs/breakdown/: README.md  backend.md
docs/concepts/: tensor-logic-mapping.md
docs/research/: intel.md  rag-goals.md
docs/specs/api/: spec.md  tasks.md
docs/specs/backend/: plan.md  spec.md  tasks.md
docs/specs/compilation/: plan.md  spec.md  tasks.md
docs/specs/core/: spec.md  tasks.md
docs/specs/verification/: plan.md  spec.md  tasks.md
docs/tutorials/: 00_newcomers_guide.md  03_temperature_guide.md  04_troubleshooting.md  index.md
examples/: 00_hello_world.py  01_family_tree_minimal.py  02_temperature_demo.py  03_knowledge_graph_query.py  04_recommendation_system.py  README.md  compilation_strategies.py  freebase_reasoning.py  gradient_training.py  knowledge_graph_reasoning.py  langchain_integration.py
lean/: TensorLogic.lean  lake-manifest.json  lakefile.lean
notebooks/: 01_getting_started.ipynb  02_knowledge_graphs.ipynb  03_compilation_strategies.ipynb  04_temperature_control.ipynb  05_google_colab_cuda.ipynb
src/tensorlogic/: __init__.py
src/tensorlogic/api/: __init__.py  patterns.py
src/tensorlogic/backends/: __init__.py  cuda.py  (+4 more)
tests/test_backends/: test_numpy.py
tests/test_core/: test_integration.py  test_operations.py  test_properties.py
(+4 files in other folders)
