[project]
name = "tensorlogic"
version = "0.1.0"
description = "Neural-symbolic AI framework unifying logical reasoning and tensor computation"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "TensorLogic Contributors"}
]
keywords = ["neural-symbolic", "tensor", "logic", "ai", "mlx", "reasoning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
mlx = [
    "mlx>=0.30.0",
]
all = [
    "mlx>=0.30.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.148.7",
    "mypy>=1.19.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.8",
]
